# rustock

./: .gitignore  Cargo.toml  README.md  implementation_plan.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  rlp_compat.rs
crates/core/src/types/: block.rs  header.rs  transaction.rs
crates/core/src/validation/: difficulty.rs  header_rules.rs  merged_mining.rs  mod.rs  tests.rs
crates/networking/: Cargo.toml
crates/networking/src/: codec.rs  handshake.rs  lib.rs  node.rs  outbound.rs  peer_exchange.rs  peers.rs  session.rs  utils.rs
crates/networking/src/discovery/: message.rs  mod.rs  table.rs  tests.rs
crates/networking/src/protocol/: eth.rs  mod.rs  p2p.rs  rlp_compat.rs  rsk.rs
crates/networking/src/rlpx/: codec.rs  ecies.rs  frame.rs  handshake.rs  mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/sync/: Cargo.toml
crates/sync/src/: events.rs  handler.rs  lib.rs  manager.rs  service.rs  state.rs
docs/: java-compatibility.md
