[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/storage",
    "crates/networking",
    "crates/sync",
]
resolver = "2"

[workspace.dependencies]
alloy-primitives = { version = "1.5.4", features = ["serde", "rlp"] }
alloy-rlp = { version = "0.3.13", features = ["derive"] }
anyhow = "1.0.101"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
thiserror = "2.0.18"
rand = "0.8.5"
tempfile = "3.25.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
