[package]
name = "rustock-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "1.5.4"
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
k256 = "0.13.4"
rustock-core = { path = "../core" }
rustock-networking = { version = "0.1.0", path = "../networking" }
rustock-storage = { version = "0.1.0", path = "../storage" }
rustock-sync = { version = "0.1.0", path = "../sync" }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
hex-literal = "0.4.1"
rand = "0.8.5"
hex = "0.4.3"
