[package]
name = "rustock-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5.58", features = ["derive"] }
k256 = "0.13.4"
rustock-core = { version = "0.1.0", path = "../core" }
rustock-networking = { version = "0.1.0", path = "../networking" }
rustock-storage = { version = "0.1.0", path = "../storage" }
rustock-sync = { version = "0.1.0", path = "../sync" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex-literal = "0.4.1"
rand = { workspace = true }
hex = "0.4.3"
