[package]
name = "rustock-networking"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "1.5.4", features = ["serde", "rlp"] }
alloy-rlp = { version = "0.3.13", features = ["derive"] }
anyhow = "1.0.100"
bytes = "1.9.0"
futures = "0.3.31"
k256 = { version = "0.13.4", features = ["ecdsa", "ecdh"] }
rand = "0.8.5"
rand_core = "0.10.0"
rustock-core = { version = "0.1.0", path = "../core" }
rustock-storage = { version = "0.1.0", path = "../storage" }
serde = { version = "1.0.228", features = ["derive"] }
sha3 = "0.10.8"
thiserror = "2.0.18"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["v4"] }
aes = "0.8.4"
ctr = "0.9.2"
hmac = "0.12.1"
sha2 = "0.10.8"
