[package]
name = "rustock-networking"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
anyhow = { workspace = true }
bytes = "1.9.0"
futures = "0.3.31"
k256 = { version = "0.13.4", features = ["ecdsa", "ecdh"] }
rand = { workspace = true }
rand_core = "0.10.0"
rustock-core = { version = "0.1.0", path = "../core" }
serde = { workspace = true }
sha3 = "0.10.8"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.20.0", features = ["v4"] }
aes = "0.8.4"
ctr = "0.9.2"
hmac = "0.12.1"
sha2 = "0.10.9"
