[package]
name = "rustock-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
rustock-core = { version = "0.1.0", path = "../core" }
rocksdb = "0.22.0"
anyhow = { workspace = true }
alloy-rlp = { workspace = true }
alloy-primitives = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
