[package]
name = "rustock-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
rustock-core = { version = "0.1.0", path = "../core" }
rustock-storage = { version = "0.1.0", path = "../storage" }
rustock-networking = { version = "0.1.0", path = "../networking" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
futures = "0.3.31"
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
